# ApproximateDRAMandSRAM

./: .~lock.近似处理实验 (1).odt#  .~lock.近似处理实验.docx#  7.31.txt  CMakeLists.txt  DRAMandSRAM.cpp  DRAMandSRAM.hpp  README.md  Setting.hpp  lena512.raw  main.cpp  main.hpp  outputQualityEvaluate.cpp  outputQualityEvaluate.hpp  paper.docx  runApproximateStorage.cpp  runApproximateStorage.hpp  vddReduction.cpp  vddReduction.hpp  ~$paper.docx  原理图.docx  完全截断的实验.docx  补两张图.docx  近似处理实验.docx  近似处理实验.odt
.cache/clangd/index/: DRAMandSRAM.cpp.8ED7626C27A7E92D.idx  DRAMandSRAM.hpp.3D0D61510345A327.idx  Setting.hpp.816EDB8E2CD9E7D5.idx  main.cpp.98CF56F69EBC4530.idx  main.hpp.5EF2405EA3835014.idx  outputQualityEvaluate.cpp.D5E07D34620C62EB.idx  (+5 more)
20221211/: bare_jrnl_new_sample4.aux  bare_jrnl_new_sample4.blg  bare_jrnl_new_sample4.dvi  bare_jrnl_new_sample4.tex  reference.bib
Figures/: 1.docx  Average PSNR with different K value.pzfx  Circuit scheme of bitcell in DRAM and SRAM.vsdx  DRAM simulation.pzfx  Data flow.vsdx  Encoding scheme for the high part.vsdx  Fig5.vsdx  Flow chart for experimental simulation.vsdx  Illustration of the proposed strategy.vsdx  MPEG-2.vsdx  PSNR value of images with complete dropping method.docx  PSNR value of images with complete dropping method.vsdx  PSNR value of images with proposed strategy.vsdx  SRAM approximation error model.pzfx  SRAM simulation.pzfx  selective reduced supply Voltage.vsdx  vdd_PSNR.docx
IEEE-Transactions-LaTeX2e-templates-and-instructions 3/: bare_jrnl_new_sample4.aux  bare_jrnl_new_sample4.bbl  bare_jrnl_new_sample4.tex
